--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   }
   .bg {
     /* 使用生成的风景背景图片 */
-    background-image: url('https://joytiantian.oss-cn-chengdu.aliyuncs.com/images/wallpaper.jpg');
+    background-image: url('/images/wallpaper.jpg');
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
