--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    overflow: hidden;
   }
   .search-box {
     position: absolute;
