--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     height: 100%;
     margin: 0;
   }
-  .bg {
-    /* 使用生成的风景背景图片 */
-    background-image: url('/images/wallpaper.jpg');
+  .bg { 
+    background-image: url('images/wallpaper.jpg');
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     overflow: hidden;
+    transition: backdrop-filter 0.5s ease; 
   }
   .search-box {
     position: absolute;
@@ -34,6 +34,16 @@
     border-radius: 30px; /* 椭圆形边框 */
     background: rgba(255, 255, 255, 0.5); /* 半透明背景 */
     backdrop-filter: blur(10px); /* 毛玻璃效果 */
+    transition: background 0.5s, backdrop-filter 0.5s; /* 添加过渡效果 */
+  }
+
+  .search-box input[type="text"]:focus {
+    background: rgba(255, 255, 255, 0.7); /* 点击时背景变亮 */
+    backdrop-filter: blur(5px); /* 点击时背景模糊 */
+  }
+
+  .search-box input[type="text"]:focus ~ .bg {
+    backdrop-filter: blur(5px) brightness(50%); /* 点击时背景模糊且变暗 */
   }
 
   .search-box form {
