--- a/index.html
+++ b/index.html
@@ -25,7 +25,16 @@
     transform: translate(-50%, 50%);
     width: 61.8%; /* 搜索框的新宽度 */
   }
-
+/* 媒体查询，仅针对屏幕宽度小于768px的设备 */
+@media (max-width: 768px) {
+  .search-box {
+    position: fixed; /* 固定在屏幕底部 */
+    bottom: 0;
+    left: 0;
+    width: 100%; /* 宽度调整为100% */
+    transform: none; /* 移除转换 */
+  }
+}
   .search-box input[type="text"] {
     width: 100%; /* 搜索框内文本框的宽度 */
     padding: 10px;
