--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     bottom: 80%;
     left: 50%;
     width: 61.8%%; /* 宽度调整为100% */
-    transform: none; /* 移除转换 */
+     transform: translate(-50%, 50%);
+   transition: backdrop-filter 0.5s ease; 
   }
 }
   .search-box input[type="text"] {
