--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed; /* 添加这一行来固定背景图片 */
     overflow: hidden;
     transition: backdrop-filter 0.5s ease; 
   }
@@ -31,7 +32,7 @@
     position: fixed; /* 固定在屏幕底部 */
     bottom: 80%;
     left: 50%;
-    width: 61.8%%; /* 宽度调整为100% */
+    width: 61.8%; /* 宽度调整为100% */
      transform: translate(-50%, 50%);
    transition: backdrop-filter 0.5s ease; 
   }
