--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     background-size: cover;
     background-attachment: fixed; /* 添加这一行来固定背景图片 */
     overflow: hidden;
+    position: fixed;
     transition: backdrop-filter 0.5s ease; 
   }
   .search-box {
