--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     background-size: cover;
     background-attachment: fixed; /* 添加这一行来固定背景图片 */
     overflow: hidden;
-    position: fixed;
     transition: backdrop-filter 0.5s ease; 
   }
   .search-box {
@@ -30,12 +29,11 @@
 /* 媒体查询，仅针对屏幕宽度小于768px的设备 */
 @media (max-width: 768px) {
   .search-box {
-    position: fixed; /* 固定在屏幕底部 */
-    bottom: 80%;
-    left: 50%;
-    width: 61.8%; /* 宽度调整为100% */
-     transform: translate(-50%, 50%);
-   transition: backdrop-filter 0.5s ease; 
+  
+  position: absolute; /* 固定位置 */
+  bottom: 38.2vh; /* 视口高度的38.2%，即上黄金分割线位置 */
+  left: 50%; /* 水平居中 */
+  transform: translate(-50%, -50%); /* 确保完全居中 */
   }
 }
   .search-box input[type="text"] {
