--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
     overflow: hidden;
     transition: backdrop-filter 0.5s ease; /* 添加过渡效果 */
   }
+  .search-box {
+    position: absolute;
+    bottom: 20%; /* 根据黄金分割比例调整 */
+    left: 50%; /* 水平居中 */
+    transform: translate(-50%, 50%);
+    width: 61.8%; /* 搜索框的新宽度 */
+    z-index: 2; /* 确保搜索框在背景之上 */
+  }
   }
   @media (max-width: 768px) {
     .search-box {
