--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
     transform: translate(-50%, 50%);
     width: 61.8%; /* 搜索框的新宽度 */
   }
+  .search-box input[type="text"] {
+    width: 100%; /* 搜索框内文本框的宽度 */
+    padding: 10px;
+    margin: 0 auto; /* 水平居中 */
+    border: 1px solid #ccc; /* 边框颜色 */
+    border-radius: 30px; /* 椭圆形边框 */
+    background: rgba(255, 255, 255, 0.5); /* 半透明背景 */
+    backdrop-filter: blur(10px); /* 毛玻璃效果 */
+    transition: background 0.5s, backdrop-filter 0.5s; /* 添加过渡效果 */
+  }
   @media (max-width: 768px) {
     .search-box {
     position: absolute;
