--- a/index.html
+++ b/index.html
@@ -35,24 +35,6 @@
     backdrop-filter: blur(10px); /* 毛玻璃效果 */
     transition: background 0.5s, backdrop-filter 0.5s; /* 添加过渡效果 */
   }
-  @media (max-width: 768px) {
-    .search-box {
-    position: absolute;
-    bottom: 70%; /* 根据黄金分割比例调整 */
-    left: 50%; /* 水平居中 */
-    transform: translate(-50%, 50%);
-    width: 61.8%; /* 搜索框的新宽度 */
-}
-  .search-box input[type="text"] {
-    width: 100%; /* 搜索框内文本框的宽度 */
-    padding: 10px;
-    margin: 0 auto; /* 水平居中 */
-    border: 1px solid #ccc; /* 边框颜色 */
-    border-radius: 30px; /* 椭圆形边框 */
-    background: rgba(255, 255, 255, 0.5); /* 半透明背景 */
-    backdrop-filter: blur(10px); /* 毛玻璃效果 */
-    transition: background 0.5s, backdrop-filter 0.5s; /* 添加过渡效果 */
-  }
 
   .search-box input[type="text"]:focus {
     background: rgba(255, 255, 255, 0.7); /* 点击时背景变亮 */
@@ -66,6 +48,26 @@
   .search-box form {
     display: flex; /* 表单内元素水平布局 */
     justify-content: center; /* 水平居中 */
+  }
+  @media (max-width: 768px) {
+    .bg { 
+      background: rgba(238, 153, 153, 0.809)
+  }
+    .search-box {
+    position: absolute;
+    bottom: 70%; /* 根据黄金分割比例调整 */
+    left: 50%; /* 水平居中 */
+    transform: translate(-50%, 50%);
+    width: 61.8%; /* 搜索框的新宽度 */
+    search-box input[type="text"] {
+    width: 100%; /* 搜索框内文本框的宽度 */
+    padding: 10px;
+    margin: 0 auto; /* 水平居中 */
+    border: 1px solid #ccc; /* 边框颜色 */
+    border-radius: 30px; /* 椭圆形边框 */
+    background: rgba(255, 255, 255, 0.5); /* 半透明背景 */
+    backdrop-filter: blur(10px); /* 毛玻璃效果 */
+    transition: background 0.5s, backdrop-filter 0.5s; /* 添加过渡效果 */
   }
 
 </style>
