--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
       background: rgba(238, 153, 153, 0.809)
   }
     .search-box {
-    position: absolute;
-    bottom: 70%; /* 根据黄金分割比例调整 */
+    position: fix;
+    bottom: 50%; /* 根据黄金分割比例调整 */
     left: 50%; /* 水平居中 */
     transform: translate(-50%, 50%);
     width: 61.8%; /* 搜索框的新宽度 */
