--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     .search-box input[type="text"]:focus {
       background: rgba(255, 192, 203, 0.7); /* 点击时背景变浅红色 */
       backdrop-filter: blur(5px); /* 点击时背景模糊 */
-      transform: scale(1.1); /* 点击时放大一点 */
+       /* 点击时放大一点 transform: scale(1.1);*/
     }
   }
 </style>
