--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     }
     .search-box {
       position: absolute;
-      bottom: 61.8%; /* 根据黄金分割比例调整 */
+      bottom: 50%; /* 根据黄金分割比例调整 */
       left: 50%; /* 水平居中 */
       transform: translate(-50%, 50%);
       width: 61.8%; /* 搜索框的新宽度 */
@@ -70,7 +70,9 @@
       backdrop-filter: blur(10px); /* 毛玻璃效果 */
       transition: background 0.5s, backdrop-filter 0.5s; /* 添加过渡效果 */
     }
-
+search-box input[type="text"]::selection {
+    background: #000000; /* 选定文本的背景颜色为黑色 */
+  }
     .search-box input[type="text"]:focus {
       border: 1px solid black;
       background: rgba(255, 192, 203, 0.7); /* 点击时背景变浅红色 */
