--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Joytiantian</title>
-<style>  
+<style>
   body, html {
     height: 100%;
     margin: 0;
@@ -15,17 +15,25 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    overflow: hidden;
-    transition: backdrop-filter 0.5s ease; /* 添加过渡效果 */
+    transition: 0.5s ease; /* 添加过渡效果 */
+    z-index: 1; /* 设置背景的z-index值 */
+    position: fixed; /* 固定背景位置 */
+    width: 100%; /* 背景宽度 */
+    top: 0; /* 背景顶部对齐 */
+    left: 0; /* 背景左侧对齐 */
   }
   .search-box {
-    position: absolute;
-    bottom: 20%; /* 根据黄金分割比例调整 */
+    position: absolute; /* 相对定位 */
+    z-index: 2;
+    bottom: 25%; /* 根据黄金分割比例调整 */
     left: 50%; /* 水平居中 */
     transform: translate(-50%, 50%);
-    width: 61.8%; /* 搜索框的新宽度 */
+    width: 61.8%; /* 搜索框的新宽度 */; /* 确保搜索框在背景之上 */
+    /* 其他样式保持不变 */
   }
   .search-box input[type="text"] {
+    z-index: 3; /* 确保文本框在搜索框之上 */
+    backdrop-filter: none; /* 移除文本框的毛玻璃效果 */
     width: 100%; /* 搜索框内文本框的宽度 */
     padding: 10px;
     margin: 0 auto; /* 水平居中 */
@@ -35,83 +43,88 @@
     backdrop-filter: blur(10px); /* 毛玻璃效果 */
     transition: background 0.5s, backdrop-filter 0.5s; /* 添加过渡效果 */
   }
-
   .search-box input[type="text"]:focus {
     background: rgba(255, 255, 255, 0.7); /* 点击时背景变亮 */
     backdrop-filter: blur(5px); /* 点击时背景模糊 */
+    
   }
-
-  .search-box input[type="text"]:focus ~ .bg {
-    backdrop-filter: blur(5px) brightness(50%); /* 点击时背景模糊且变暗 */
-  }
-
   .search-box form {
     display: flex; /* 表单内元素水平布局 */
     justify-content: center; /* 水平居中 */
   }
+
   @media (max-width: 768px) {
     .bg { 
       background: rgba(136, 201, 247, 0.784); /* 修改了这里的颜色值 */
+      height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    transition: 0.5s ease; /* 添加过渡效果 */
+    z-index: 1; /* 设置背景的z-index值 */
+    position: fixed; /* 固定背景位置 */
+    width: 100%; /* 背景宽度 */
+    top: 0; /* 背景顶部对齐 */
+    left: 0; /* 背景左侧对齐 */
     }
     .search-box {
-      position: absolute;
-      bottom: 50%; /* 根据黄金分割比例调整 */
-      left: 50%; /* 水平居中 */
-      transform: translate(-50%, 50%);
-      width: 61.8%; /* 搜索框的新宽度 */
-    }
+    position: absolute; /* 相对定位 */
+    z-index: 2;
+    bottom: 50%; /* 根据黄金分割比例调整 */
+    left: 50%; /* 水平居中 */
+    transform: translate(-50%, 50%);
+    width: 61.8%; /* 搜索框的新宽度 */; /* 确保搜索框在背景之上 */
+    /* 其他样式保持不变 */
+  }
     .search-box input[type="text"] { /* 添加了点以指定类选择器 */
-      width: 100%; /* 搜索框内文本框的宽度 */
-      padding: 10px;
-      margin: 0 auto; /* 水平居中 */
+      z-index: 3; /* 确保文本框在搜索框之上 */
+    backdrop-filter: none; /* 移除文本框的毛玻璃效果 */
+    width: 100%; /* 搜索框内文本框的宽度 */
+    padding: 10px;
+    margin: 0 auto; /* 水平居中 */
       border: 1px solid #f06c82; /* 边框颜色 */
       border-radius: 30px; /* 椭圆形边框 */
       background: rgba(255, 255, 255, 0.5); /* 半透明背景 */
       backdrop-filter: blur(10px); /* 毛玻璃效果 */
-      transition: background 0.5s, backdrop-filter 0.5s; /* 添加过渡效果 */
+    transition: background 0.5s, backdrop-filter 0.5s; /* 添加过渡效果 */
     }
-search-box input[type="text"]::selection {
-    background: #000000; /* 选定文本的背景颜色为黑色 */
-  }
-    .search-box input[type="text"]:focus {
+.search-box input[type="text"]::selection {
+    background: #000000;
+    backdrop-filter: blur(5px);} 
+  .search-box input[type="text"]:focus {
       border: 1px solid black;
       background: rgba(255, 192, 203, 0.7); /* 点击时背景变浅红色 */
       backdrop-filter: blur(5px); /* 点击时背景模糊 */
       /* 点击时放大一点transform: scale(1.1);  */
     }
+    .search-box form {
+    display: flex; /* 表单内元素水平布局 */
+    justify-content: center; /* 水平居中 */
+  }
+
   }
 </style>
 </head>
 <body>
-
-<div class="bg">
+  <div class="bg" id="bg"></div>
   <div class="search-box">
     <form action="https://www.baidu.com/s" method="get">
-      <input type="text" id="searchInput" name="wd" placeholder="这世界总有人在忙忙碌碌寻宝藏" style="display: block;">
+      <input type="text" name="wd" placeholder="这世界总有人在忙忙碌碌寻宝藏" style="display: block;" onfocus="document.getElementById('bg').style.filter = 'blur(4px) brightness(50%)';" onblur="document.getElementById('bg').style.filter = 'none';">
     </form>
   </div>
-</div>
-
-<script>
-  // 检测设备类型并更新占位符
-  function updatePlaceholder() {
-    var input = document.getElementById('searchInput');
-    var isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
-    if (isMobile) {
-      input.placeholder = 'Baidu Search'; // 手机设备显示
-    } else {
-      input.placeholder = '这世界总有人在忙忙碌碌寻宝藏'; // 非手机设备显示
-      // 创建音频元素并自动播放
-      var audio = document.createElement('audio');
-      audio.autoplay = true;
-      audio.loop = true;
-      audio.src = 'Music/music.mp3'; // 确保路径正确
-      document.body.appendChild(audio);
-    }
-  }
-  // 在页面加载时调用函数
-  window.onload = updatePlaceholder;
-</script>
-
-</body>
-</html>
+  
+  <script>
+  // 获取搜索框元素
+  var searchBox = document.querySelector('.search-box input[type="text"]');
+  // 监听搜索框的聚焦事件
+  searchBox.addEventListener('focus', function() {
+    document.getElementById('bg').style.filter = 'blur(4px) brightness(50%)';
+  });
+  // 监听搜索框的失焦事件
+  searchBox.addEventListener('blur', function() {
+    document.getElementById('bg').style.filter = 'none';
+  });
+  </script>
+  
+  </body>
+  </html>
