--- a/index.html
+++ b/index.html
@@ -136,9 +136,7 @@
                                             const weather = weatherData.lives[0];
                                             document.getElementById('weather').innerHTML = ` <p>${weather.city}</p>
                                                 <p>${weather.weather}</p>
-                                                <p>${weather.temperature}°C</p>
-                                                <p>$ <br> 
-                                            `;
+                                                <p>${weather.temperature}°C</p> `;
                                             document.getElementById('weather').style.display = 'block';
                                         }
                                     });
