--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     transform: translate(-50%, -50%);
     width: 17%; 
     height: 17%; 
+    font-size: 4.3vh;
     text-align: center;
     animation: blurAnimation 5s infinite; 
     background: rgba(255, 255, 255, 0.5);
@@ -90,6 +91,7 @@
 }
         @media (max-width: 768px) {
             #weather {
+                font-size: 4.3vw;
     border: 1px solid #f06c82;
 }
             .bg { 
