--- a/index.html
+++ b/index.html
@@ -91,7 +91,6 @@
 }
         @media (max-width: 768px) {
             #weather {
-                font-size: 4.3vw;
     border: 1px solid #f06c82;
 }
             .bg { 
@@ -110,6 +109,7 @@
             .search-box input[type="text"]:focus {
                 background: rgba(187, 225, 255, 0.57);
                 backdrop-filter: blur(5px);
+                transform: scale(1.3);
                 transition: background 2s, backdrop-filter 2s;
             }
         }
